Added testcase CheckRestroQuantityCountAndCheckoutCountTest.java and made changes in corresponding files